# Scraper_Hostinger_V1

./: .env.hostinger.example  .gitignore  README.md  docker-compose.hostinger.yml  docker-compose.yml  render.yaml
backend/: .env.example  pyproject.toml  railway.toml
backend/alembic/versions/: 1a2b3c4d5e6f_add_scrape_log_diagnostics.py  2b3c4d5e6f7a_add_group_safeguard_state.py  2b3c4d5e6f7a_enforce_same_airline_round_trip_defaults.py  3c4d5e6f7a8b_add_deferred_retry_state_to_route_groups.py  3c4d5e6f7a8b_add_max_layover_to_route_groups.py  4d5e6f7a8b9c_add_multi_city_legs_to_route_groups.py  6a7b8c9d0e1f_cascade_scrape_logs_on_group_delete.py  7b8c9d0e1f2a_add_same_airline_only_to_route_groups.py  8c9d0e1f2a3b_add_max_leg_duration_to_route_groups.py
backend/app/core/: app_factory.py  config.py
backend/app/data/: location_catalog.json
backend/app/models/: collection_run.py  route_group.py  scrape_log.py
backend/app/providers/: __init__.py  base.py  kayak.py  registry.py  scrapingbee.py  searchapi.py
backend/app/schemas/: health.py  location.py  route_group.py
backend/app/scripts/: generate_location_catalog.py
backend/app/services/: auth_service.py  export_service.py  price_collector.py  route_group_service.py
backend/app/tasks/: scheduler.py
backend/app/utils/: location_resolver.py  route_segments.py
backend/scripts/: reverse_engineer_kayak.py  verify_scrapingbee.py
backend/tests/: test_config.py  test_location_resolver.py  test_route_group_schema.py  test_scrapingbee_pool.py
backend/tests/integration/: conftest.py  test_collection_api.py  (+1 more)
(+71 files in other folders)
